--- a/dashboard/templates/jobs/_job_form.html
+++ b/dashboard/templates/jobs/_job_form.html
@@ -100,7 +100,7 @@ function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}var poll_t
                 <select id="buildSystem" class="selectpicker">
                     <option selected disabled>Select Build System</option>
                     {% for product, build_system in build_systems.items %}
-                        <option value="{{ build_system }}">{{ product }} - {{ build_system }}</option>
+                        <option value="{{ product }}-{{ build_system }}">{{ product }} - {{ build_system }}</option>
                     {% endfor %}
                 </select>
                 {% else %}
@@ -108,7 +108,7 @@ function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}var poll_t
                 {% endif %}
             </div>
             <div id="div-build-tags">
-                {% tag_build_tags 'dummy' %}
+                {% tag_build_tags 'dummy' 'dummy' %}
             </div>
           </div>
           {% endif %}
