--- a/dashboard/templates/packages/_branch_mapping.html
+++ b/dashboard/templates/packages/_branch_mapping.html
@@ -22,7 +22,7 @@
           {{ version|get_item:mapping_keys.2 }}&nbsp;
           {%if version|get_item:mapping_keys.1 and version|get_item:mapping_keys.2 %}
           <a type="button" class="btn btn-small pull-right" data-toggle="tooltip" title="Sync with {{ version|get_item:mapping_keys.1 }}"
-            href="{% url 'jobs-yml-based' %}?template=syncdownstream&package={{ package_name }}&buildsys={{ version|get_item:mapping_keys.1 }}&tag={{ version|get_item:mapping_keys.2 }}">
+            href="{% url 'jobs-yml-based' %}?template=syncdownstream&package={{ package_name }}&buildsys={{ version|get_item:'product' }}-{{ version|get_item:mapping_keys.1 }}&tag={{ version|get_item:mapping_keys.2 }}">
             <span class="fa fa-refresh" aria-hidden="true"></span>
           </a>
           {% endif %}
