--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -201,7 +201,7 @@
       </li>
       <li class="list-group-item" id="li-coverage">
         <a href="{% url 'settings-graph-rules' %}">
-          <span class="fa fa-bar-chart" data-toggle="tooltip" title="Translation Coverage"></span>
+          <span class="fa fa-area-chart" data-toggle="tooltip" title="Translation Coverage"></span>
           <span class="list-group-item-value">Coverage</span>
         </a>
       </li>
