--- a/dashboard/templates/jobs/log_detail.html
+++ b/dashboard/templates/jobs/log_detail.html
@@ -54,7 +54,7 @@
                                 title="Copy to clipboard">Copy URL <span class="fa fa-clipboard"></span></button>
                     </span>
                 {% endif %}
-            </h4><hr/>
+            </h4><hr/>{% tag_job_analysis log.job_log_json %}
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-md-3">
