--- a/dashboard/templates/jobs/_job_analysis.html
+++ b/dashboard/templates/jobs/_job_analysis.html
@@ -12,8 +12,8 @@
         {% endwith %}
     {% endif %}</span></div>
     <div class="card-pf-body">
+        {% if 'stats' in job_info %}
         <div class="panel panel-default" style="max-height:300px;overflow-y:scroll !important;">
-          {% if 'stats' in job_info %}
           <table class="table table-bordered table-hover">
               <thead style="position:sticky;top:0;">
                 <tr>
@@ -26,14 +26,17 @@
                   {% for stats_chunk in job_info|get_item:"stats" %}
                   <tr>
                     {% for stat in stats_chunk %}
-                    <td>{{ stat }}</td>
+                      <td>{{ stat }} {% if not forloop.first %}
+                          <small class="text-muted">messages</small>{% endif %}</td>
                     {% endfor %}
                   </tr>
                   {% endfor %}
               </tbody>
           </table>
-          {% endif %}
         </div>
+        {% else %}
+            <span class="text-warning" style="padding-left:20px">No Statistics Derived.</span>
+        {% endif %}
     </div>
     {% if 'pot_differ' in job_info %}
     <div class="card-pf-footer text-danger">{{ job_info|get_item:"pot_differ" }}</div>
