Package Details Page: some more formatting

--- a/dashboard/templates/packages/_branch_mapping.html
+++ b/dashboard/templates/packages/_branch_mapping.html
@@ -2,8 +2,8 @@
 {% if branch_mapping %}
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">Branch Mapping</h3>
-    <span class="text-info">This mapping is basis to comparision of statistics (<i>diff</i>).</span>
+    <h3 class="panel-title">Branch Mapping {% if mapping_lastupdated %}<span class="pull-right text-muted">Updated {{ mapping_lastupdated|timesince }} ago</span>{% endif %}</h3>
+    <span class="text-info">This mapping is basis to comparision of statistics.</span>
   </div>
   <table class="table table-hover table-bordered" cellspacing="0">
     <thead>
@@ -31,12 +31,6 @@
       {% endfor %}
     </tbody>
   </table>
-  {% if mapping_lastupdated %}
-  <div class="panel-footer">
-    <span>&nbsp;</span>
-    <span class="pull-right text-muted">Updated {{ mapping_lastupdated|timesince }} ago</span>
-  </div>
-  {% endif %}
 </div>
 {% else %}
 No mapping found.
