--- a/dashboard/templates/packages/_tabular_form.html
+++ b/dashboard/templates/packages/_tabular_form.html
@@ -34,7 +34,7 @@
                 {% else %}
                 <tr>
                 {% endif %}
-                  <th class="fixed-side"><a href="#"><span class="text-info">{{ version }}</span></a></th>
+                  <th class="fixed-side"><span class="text-info">{{ version }}</span></th>
                   {% for index, stat in stats %}
                       <td>
                           {% if stat and stat == 100 %}
