add basic maps support

--- a/dashboard/templates/languages/language_release_view.html
+++ b/dashboard/templates/languages/language_release_view.html
@@ -10,7 +10,7 @@
 {% block pagecontent %}
 <div class="panel panel-default">
   <div class="panel-heading">
-      <span class="text-info">Translation Platform Statistics of Packages for a Release</span>
+      <span class="card-pf-title">Translation Platform Statistics of Packages for a Release</span>
       <span class="pull-right">
         <a href="{% url 'settings-languages' %}" class="btn btn-default btn-small">List Languages</a>
         <a href="{{request.META.HTTP_REFERER}}" class="btn btn-default btn-small">Go Back</a>
