--- a/transtats/static/css/transtats.css
+++ b/transtats/static/css/transtats.css
@@ -112,8 +112,22 @@
 }
 
 .vert-scroll-div-ts {
-    max-height: 470px;
+    max-height: 340px;
     overflow-y: auto;
+}
+
+.map-container {
+    width: 100%;
+    min-height: 400px;
+    position: relative;
+    overflow-x: auto;
+}
+
+.row-eq-height {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
 }
 
 body {
