--- a/dashboard/templates/releases/_releases_summary.html
+++ b/dashboard/templates/releases/_releases_summary.html
@@ -49,7 +49,7 @@
   </div>
 </div>
 <div class="panel-footer">
-  <span class="text-info">Click a <span class="text-primary">release</span> or a <span class="text-primary">language</span> to get into insights!</span>
+  <span class="text-info">Click a <span class="text-primary">release</span> or a <span class="text-primary">language</span> to see details!</span>
   <span class="pull-right text-muted">Updated <span class="text-info">{{ last_updated|timesince }}</span> ago</span>
 </div>
 {% else %}
