--- a/dashboard/templates/releases/release_list.html
+++ b/dashboard/templates/releases/release_list.html
@@ -122,7 +122,7 @@
 
   <div class="panel panel-default col-xs-12 col-md-3" id="panel-trending-languages">
     <div class="panel-body">
-      {% include "releases/_trending_languages.html" %}
+      {% tag_trending_languages %}
     </div>
   </div>
 
