--- a/dashboard/templates/releases/_release_map_view.html
+++ b/dashboard/templates/releases/_release_map_view.html
@@ -61,7 +61,7 @@
         projection: 'mercator', // big world map
         // countries don't listed in dataset will be painted with this color
         fills: { defaultFill: '#F5F5F5' },
-        data: dataset,
+        // data: dataset,
         geographyConfig: {
             borderColor: '#DEDEDE',
             highlightBorderWidth: 2,
