minor bugfix: ui

--- a/dashboard/templates/releases/release_view.html
+++ b/dashboard/templates/releases/release_view.html
@@ -16,6 +16,9 @@
     min-height: 500px
   }
 </style>
+<style type="text/css">
+    .table-area{width:100%;min-height:250px;height:100%}.graph-area{width:100%;min-height:600px}.table-scroll{position:relative;max-width:100%;margin:auto;overflow:hidden}.table-wrap{width:100%;overflow:auto}.table-scroll table{width:100%;margin:auto;border-collapse:separate;border-spacing:0}.table-scroll td,.table-scroll th{padding:5px 10px;background:0 0;white-space:nowrap;vertical-align:top}.table-scroll tfoot,.table-scroll thead{background:0 0}.clone{position:absolute;top:0;left:0;pointer-events:none}.clone td,.clone th{visibility:hidden;border-color:transparent}.clone tbody th{visibility:visible;color:red}.clone .fixed-side{background:Snow;visibility:visible}.clone tfoot,.clone thead{background:0 0}.flot-x-axis .flot-tick-label{white-space:nowrap;transform:translate(-9px,0) rotate(-60deg);text-indent:-100%;transform-origin:top right;text-align:right!important}
+</style>
 {% endblock %}
 {% block pagecontent %}
 <div class="panel panel-default" id="panel-release">
